--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
     "friendsoftypo3/phpstan-typo3": "^0.9",
     "typo3/cms-lowlevel": "^11.5",
     "helhum/typo3-console": "*",
-    "typo3/coding-standards": "^0.5"
+    "typo3/coding-standards": "^0.5",
+    "ssch/typo3-rector": "^1.1"
   },
   "autoload": {
     "psr-4": {
