--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,8 @@
     "typo3/cms-lowlevel": "^11.5",
     "helhum/typo3-console": "*",
     "typo3/coding-standards": "^0.5",
-    "ssch/typo3-rector": "^1.1"
+    "ssch/typo3-rector": "^1.1",
+    "georgringer/news": "^11.0"
   },
   "autoload": {
     "psr-4": {
