--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
     "typo3/cms-tstemplate": "^11.5",
     "typo3/cms-install": "^11.5",
     "typo3/cms-info": "^11.5",
+	  "typo3/cms-beuser": "^11.5",
     "friendsoftypo3/phpstan-typo3": "^0.9",
     "typo3/cms-lowlevel": "^11.5",
     "helhum/typo3-console": "*",
