--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,8 @@
   "type": "typo3-cms-extension",
   "license": "MIT",
   "config": {
+	"vendor-dir": ".Build/vendor",
+	"bin-dir": ".Build/bin",
     "platform": {
       "php": "8.1.5"
     },
@@ -22,7 +24,7 @@
 	"repositories": [
 		{
 			"type": "path",
-			"url": "TestFixture/*"
+			"url": "Tests/Fixtures/*"
 		}
 	],
   "require": {
@@ -54,7 +56,8 @@
 	"autoload-dev": {
 		"psr-4": {
 			"SUDHAUS7\\Sudhaus7Wizard\\Tests\\Unit\\": "Tests/Unit/",
-			"SUDHAUS7\\Sudhaus7Wizard\\Tests\\Functional\\": "Tests/Functional/"
+			"SUDHAUS7\\Sudhaus7Wizard\\Tests\\Functional\\": "Tests/Functional/",
+			"SUDHAUS7\\Sudhaus7Template\\": "Tests/Fixtures/template/Classes/"
 		}
 	},
   "extra": {
@@ -80,9 +83,9 @@
       "@add-local-git-config"
     ],
     "add-local-git-config": "git config --local include.path ../.gitconfig",
-    "cmscacheflush": "@php vendor/bin/typo3cms cache:flush",
-    "csfixer": "@php vendor/bin/php-cs-fixer fix",
-    "psalm": "@php ./vendor/bin/psalm --no-cache  --show-info=true --php-version=8.1",
-    "phpstan": "@php ./vendor/bin/phpstan analyze -l 9 ./Classes"
+    "cmscacheflush": "@php .Build/bin/typo3cms cache:flush",
+    "csfixer": "@php .Build/bin/php-cs-fixer fix",
+    "psalm": "@php .Build/bin/psalm --no-cache  --show-info=true --php-version=8.1",
+    "phpstan": "@php .Build/bin/phpstan analyze -l 9 ./Classes"
   }
 }
