--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,12 +14,17 @@ deploy:
 
 make-documentation:
   stage: pages
-  image:
-    name: ghcr.io/t3docs/render-documentation:develop
-    entrypoint: ["/bin/bash"]
-  before_script:
-    - 'ls -la'
-    - 'mkdir Documentation-GENERATED-temp'
+  image: docker
   script:
     - 'ls -la'
-    - '/bin/bash /ALL/Menu/mainmenu.sh makehtml'
+    - 'docker pull ghcr.io/t3docs/render-documentation:develop'
+    - 'docker tag ghcr.io/t3docs/render-documentation:develop render-documentation:develop'
+    - 'source <(docker run --rm ghcr.io/t3docs/render-documentation:develop show-shell-commands)'
+    - 'dockrun_t3rd makehtml'
+    - 'ls -la'
+    - 'mv Documentation-GENERATED-temp/Result/project/0.0.0 public'
+    - 'ls -la'
+  artifacts:
+    when: on_success
+    paths:
+      - public
