--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,9 +14,11 @@ deploy:
 
 make-documentation:
   stage: pages
-  image: docker
+  image: docker:19
   services:
-    - docker:dind
+    - docker:19-dind
+  variables:
+    DOCKER_HOST='tcp://localhost:2375'
   script:
     - 'ls -la'
     - 'docker pull ghcr.io/t3docs/render-documentation:develop'
