--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,7 +18,7 @@ make-documentation:
   services:
     - docker:19-dind
   variables:
-    DOCKER_HOST='tcp://localhost:2375'
+    DOCKER_HOST:'tcp://localhost:2375'
   script:
     - 'ls -la'
     - 'docker pull ghcr.io/t3docs/render-documentation:develop'
