--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,14 +24,8 @@ make-documentation:
     DOCKER_DRIVER: overlay2
     DOCKER_TLS_CERTDIR: ""
   script:
-    - ifconfig
     - 'ls -la'
-    - ps aux
-    - docker info
-    - 'docker pull ghcr.io/t3docs/render-documentation:develop'
-    - 'docker tag ghcr.io/t3docs/render-documentation:develop render-documentation:develop'
-    - 'source <(docker run --rm ghcr.io/t3docs/render-documentation:develop show-shell-commands)'
-    - 'dockrun_t3rd makehtml'
+    - 'docker run --rm -v `pwd`:/PROJECT -v `pwd`/Documentation-GENERATED-temp:/RESULT ghcr.io/t3docs/render-documentation:develop  makehtml'
     - 'ls -la'
     - 'mv Documentation-GENERATED-temp/Result/project/0.0.0 public'
     - 'ls -la'
