--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,7 @@ deploy:
   script:
     - 'curl --header "Job-Token: $CI_JOB_TOKEN" --data tag=$CI_COMMIT_TAG "${CI_API_V4_URL}/projects/$CI_PROJECT_ID/packages/composer"'
 
-make-documentation:
+pages:
   stage: pages
   image: docker:20.10.16
   services:
@@ -24,6 +24,7 @@ make-documentation:
     DOCKER_DRIVER: overlay2
     DOCKER_TLS_CERTDIR: ""
   script:
+    - 'mkdir Documentation-GENERATED-temp'
     - 'ls -la'
     - 'docker run --rm -v `pwd`:/PROJECT -v `pwd`/Documentation-GENERATED-temp:/RESULT ghcr.io/t3docs/render-documentation:develop  makehtml'
     - 'ls -la'
