--- a/composer.json
+++ b/composer.json
@@ -46,7 +46,7 @@
     "georgringer/news": "^11.0",
     "typo3/cms-introduction": "^4.4",
 	  "sudhaus7/template": "@dev",
-    "typo3/testing-framework": "^6.16"
+    "typo3/testing-framework": "^7.0"
   },
 	"autoload": {
 		"psr-4": {
@@ -57,6 +57,7 @@
 		"psr-4": {
 			"SUDHAUS7\\Sudhaus7Wizard\\Tests\\Unit\\": "Tests/Unit/",
 			"SUDHAUS7\\Sudhaus7Wizard\\Tests\\Functional\\": "Tests/Functional/",
+			"SUDHAUS7\\Sudhaus7Wizard\\Tests\\Mocks\\": "Tests/Mocks/",
 			"SUDHAUS7\\Sudhaus7Template\\": "Tests/Fixtures/template/Classes/"
 		}
 	},
@@ -86,6 +87,7 @@
     "cmscacheflush": "@php .Build/bin/typo3cms cache:flush",
     "csfixer": "@php .Build/bin/php-cs-fixer fix",
     "psalm": "@php .Build/bin/psalm --no-cache  --show-info=true --php-version=8.1",
-    "phpstan": "@php .Build/bin/phpstan analyze -l 9 ./Classes"
+    "phpstan": "@php .Build/bin/phpstan analyze -l 9 ./Classes",
+  	"test:php:unit": ".Build/bin/phpunit --colors=always --configuration Build/phpunit/UnitTests.xml"
   }
 }
