--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,6 +24,8 @@ pages:
     DOCKER_DRIVER: overlay2
     DOCKER_TLS_CERTDIR: ""
   script:
+    - ls -la
+    - ls -la Documentation
     - 'mkdir Documentation-GENERATED-temp'
     - 'docker run --rm -v `pwd`:/PROJECT -v `pwd`/Documentation-GENERATED-temp:/RESULT ghcr.io/t3docs/render-documentation:develop  makehtml'
     - 'mv Documentation-GENERATED-temp/Result/project/0.0.0 public'
