[TASK] Code cleanups

--- a/.gitignore
+++ b/.gitignore
@@ -105,3 +105,6 @@ fabric.properties
 /.php-cs-fixer.cache
 !/Tests/Unit/
 /Documentation-GENERATED-temp/
+/composer.json.orig
+/composer.json.testing
+/.cache/
