--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
 	],
 	"require": {
 		"ext-curl": "*",
-		"php": "8.0.*||8.1.*||8.2.*",
+		"php": "8.1.* || 8.2.*",
 		"typo3/cms-core": "11.5.*"
 	},
 	"require-dev": {
