--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
 	"require": {
 		"ext-curl": "*",
 		"php": "^8.0 || ^8.1 || ^8.2",
-		"typo3/cms-core": "11.5.*"
+		"typo3/cms-core": "11.5.*",
+		"psr/log": "^1.0"
 	},
 	"require-dev": {
 		"typo3/cms-backend": "^11.5",
