--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
 	"require": {
 		"ext-curl": "*",
 		"php": "^8.0 || ^8.1 || ^8.2",
-		"typo3/cms-core": "11.5.*"
+		"typo3/cms-core": "^11.5",
+		"psr/log": "^1.0"
 	},
 	"require-dev": {
 		"typo3/cms-backend": "^11.5",
@@ -42,11 +43,11 @@
 		"typo3/coding-standards": "^0.5",
 		"ssch/typo3-rector": "^1.1",
 		"saschaegerer/phpstan-typo3": "^1.9",
+		"staabm/phpstan-todo-by": "^0.1.25",
 		"georgringer/news": "^11.0",
 		"typo3/cms-introduction": "^4.4",
 		"sudhaus7/template": "@dev",
-		"typo3/testing-framework": "^7.0",
-		"typo3/cms-composer-installers": "^3.0"
+		"typo3/testing-framework": "^7.0"
 	},
 	"autoload": {
 		"psr-4": {
