--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
 	"name": "sudhaus7/sudhaus7-wizard",
-	"description": "(Sudhaus7) Wizard to copy Typo3 Website Trees",
+	"description": "(Sudhaus7) Wizard to copy TYPO3 Website Trees",
 	"type": "typo3-cms-extension",
 	"license": "MIT",
 	"config": {
@@ -37,7 +37,6 @@
 		"typo3/cms-install": "^11.5",
 		"typo3/cms-info": "^11.5",
 		"typo3/cms-beuser": "^11.5",
-		"friendsoftypo3/phpstan-typo3": "^0.9",
 		"typo3/cms-lowlevel": "^11.5",
 		"helhum/typo3-console": "*",
 		"typo3/coding-standards": "^0.5",
