Update references to WizardProcessInterface and add new events
The references to WizardProcessInterface across various classes have
been updated. Several new events have been created, which are
significant for components of both the create process and the cleaning
process. A new Service has been added to handle the process events, and
additional changes were made to improve functionality.

--- a/Configuration/Services.yaml
+++ b/Configuration/Services.yaml
@@ -14,3 +14,15 @@ services:
       - name: 'console.command'
         command: 'wizard:info'
         schedulable: false
+
+  SUDHAUS7\Sudhaus7Wizard\Command\ListNextCommand:
+    arguments:
+      $name: 'wizard:list'
+    tags:
+      - name: 'console.command'
+        command: 'wizard:list'
+        schedulable: false
+
+  SUDHAUS7\Sudhaus7Wizard\Process\WizardProcessRegistry:
+    arguments:
+      - !tagged_iterator { tag: 'wizard.process' }
