--- a/composer.json
+++ b/composer.json
@@ -26,28 +26,26 @@
 	],
 	"require": {
 		"ext-curl": "*",
-		"php": "^8.0 || ^8.1 || ^8.2",
-		"typo3/cms-core": "11.5.*",
-		"psr/log": "^1.0"
+		"php": "^8.1 || ^8.2",
+		"typo3/cms-core": "12.4.*",
+		"psr/log": "^3.0"
 	},
 	"require-dev": {
-		"typo3/cms-backend": "^11.5",
-		"typo3/cms-frontend": "^11.5",
-		"typo3/cms-tstemplate": "^11.5",
-		"typo3/cms-install": "^11.5",
-		"typo3/cms-info": "^11.5",
-		"typo3/cms-beuser": "^11.5",
-		"friendsoftypo3/phpstan-typo3": "^0.9",
-		"typo3/cms-lowlevel": "^11.5",
+		"typo3/cms-backend": "^12.4",
+		"typo3/cms-frontend": "^12.4",
+		"typo3/cms-tstemplate": "^12.4",
+		"typo3/cms-install": "^12.4",
+		"typo3/cms-info": "^12.4",
+		"typo3/cms-beuser": "^12.4",
+		"typo3/cms-lowlevel": "^12.4",
 		"helhum/typo3-console": "*",
 		"typo3/coding-standards": "^0.5",
 		"ssch/typo3-rector": "^1.1",
-		"saschaegerer/phpstan-typo3": "^1.9",
-		"georgringer/news": "^11.0",
-		"typo3/cms-introduction": "^4.4",
+		"georgringer/news": "^11.4",
+		"typo3/cms-introduction": "^4.6",
 		"sudhaus7/template": "@dev",
-		"typo3/testing-framework": "^7.0",
-		"typo3/cms-composer-installers": "^3.0"
+		"typo3/testing-framework": "^8.0",
+		"typo3/cms-composer-installers": "^5.0"
 	},
 	"autoload": {
 		"psr-4": {
