--- a/composer.json
+++ b/composer.json
@@ -31,15 +31,15 @@
 		"psr/log": "^3.0"
 	},
 	"require-dev": {
-		"typo3/cms-backend": "^12.4",
-		"typo3/cms-frontend": "^12.4",
-		"typo3/cms-tstemplate": "^12.4",
-		"typo3/cms-install": "^12.4",
-		"typo3/cms-info": "^12.4",
-		"typo3/cms-beuser": "^12.4",
-		"typo3/cms-lowlevel": "^12.4",
+		"typo3/cms-backend": "^13.4",
+		"typo3/cms-frontend": "^13.4",
+		"typo3/cms-tstemplate": "^13.4",
+		"typo3/cms-install": "^13.4",
+		"typo3/cms-info": "^13.4",
+		"typo3/cms-beuser": "^13.4",
+		"typo3/cms-lowlevel": "^13.4",
 		"typo3/coding-standards": "^0.8",
-		"ssch/typo3-rector": "^2.13",
+		"ssch/typo3-rector": "^v3.1.0",
 		"sudhaus7/template": "@dev",
 		"typo3/testing-framework": "^8.0",
 		"typo3/cms-composer-installers": "^5.0",
